--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -253,7 +253,6 @@ Cgo
                         <outlet property="idTextField" destination="ZBE-h4-ywG" id="BAY-ar-wQe"/>
                         <outlet property="tokenTextField" destination="nW8-HP-hhp" id="nbL-Gr-mxx"/>
                         <outlet property="welcomeLabel" destination="pyv-Ne-S5g" id="VsB-tZ-Sjd"/>
-                        <segue destination="Grf-xD-SWT" kind="show" identifier="ViewHome" id="WCN-l5-gUT"/>
                         <segue destination="NVj-Xk-m80" kind="presentation" identifier="CompleteProfile" id="VJh-c3-WKd"/>
                     </connections>
                 </viewController>
@@ -7148,13 +7147,13 @@ nenhuma carona.</string>
         <image name="menu4" width="25" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="sGI-sp-fNN"/>
-        <segue reference="VJh-c3-WKd"/>
         <segue reference="gns-F9-8s8"/>
+        <segue reference="emk-CJ-38Y"/>
+        <segue reference="sGI-sp-fNN"/>
+        <segue reference="tvA-Ui-5Q1"/>
         <segue reference="9kE-zS-Odm"/>
         <segue reference="H8O-Mc-OH3"/>
         <segue reference="ugX-qh-OjL"/>
-        <segue reference="tvA-Ui-5Q1"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
